--- a/src/layouts/header.css
+++ b/src/layouts/header.css
@@ -1,7 +1,7 @@
 header {
   background-color: #1C2E4A;
   position: relative;
-  z-index: 3;
+  z-index: 6;
 }
 
 li {
